# pridefetchrs

./: Cargo.toml  LICENSE  README.md
src/: fns.rs  main.rs
