[package]
name = "pridefetchrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
inline_colorization = "0.1.6"
term_size = "0.3.2"
